# jam-engine

./: CMakeLists.txt  README.md
include/Jam/: Canvas.h  Jam.h  Mesh.h  Shader.h  Texture2D.h  Utils.h  Vertices.h  Window.h
include/Jam/Math/: mat4.h  radians.h  vec2.h  vec3.h  vec4.h
include/glad/: glad.h
src/: glad.c
src/Jam/: Canvas.cpp  Jam.cpp  Mesh.cpp  Shader.cpp  Texture2D.cpp  Utils.cpp  Window.cpp
src/Jam/Math/: mat4.cpp  radians.cpp  vec2.cpp  vec3.cpp  vec4.cpp
